@@ -14,7 +14,6 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
@@ -205,7 +204,7 @@ public class OdooMetadata extends AbstractMetadata implements AppCenterMetadata,
 
 	@Override
 	public Collection<Edge> getAllOfflineEdges() {
-		return this.edgeCache.getAllEdges().stream().filter(Edge::isOffline).collect(Collectors.toList());
+		return this.edgeCache.getAllEdges().stream().filter(Edge::isOffline).toList();
 	}
 
 	/**
