@@ -3,7 +3,6 @@ package io.openems.edge.app.heat;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 
 import org.osgi.service.cm.ConfigurationAdmin;
 import org.osgi.service.component.ComponentContext;
@@ -143,7 +142,7 @@ public class CombinedHeatAndPower extends AbstractEnumOpenemsApp<Property> imple
 						.add(JsonFormlyUtil.buildSelect(Property.OUTPUT_CHANNEL) //
 								.setOptions(this.componentUtil.getAllRelays() //
 										.stream().map(r -> r.relays).flatMap(List::stream) //
-										.collect(Collectors.toList())) //
+										.toList()) //
 								.setDefaultValueWithStringSupplier(() -> {
 									var relays = this.componentUtil.getPreferredRelays(Lists.newArrayList(),
 											new int[] { 1 }, new int[] { 1 });
@@ -164,7 +163,7 @@ public class CombinedHeatAndPower extends AbstractEnumOpenemsApp<Property> imple
 	@Override
 	public AppDescriptor getAppDescriptor() {
 		return AppDescriptor.create() //
-				.setWebsiteUrl("https://fenecon.de/produkte/fems/fems-app-blockheizkraftwerk-bhkw/") //
+				.setWebsiteUrl("https://fenecon.de/fenecon-fems/fems-app-power-to-heat/") //
 				.build();
 	}
 
